Update `Brewfile`, move to packages directory, and update `machintosh.sh` accordingly

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -1,4 +1,5 @@
 tap "homebrew/bundle"
+tap "koekeishiya/formulae"
 brew "bat"
 brew "btop"
 brew "cmake"
@@ -15,8 +16,10 @@ brew "openjdk@17"
 brew "syncthing"
 brew "sysbench"
 brew "tmux"
+brew "wget"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "koekeishiya/formulae/yabai"
 cask "appcleaner"
 cask "audacity"
 cask "betterdisplay"
@@ -25,6 +28,7 @@ cask "discord"
 cask "dolphin"
 cask "firefox"
 cask "freecad"
+cask "gimp"
 cask "github"
 cask "kitty"
 cask "libreoffice"
@@ -40,3 +44,4 @@ cask "utm"
 cask "vlc"
 cask "vscodium"
 cask "yacreader"
+cask "zoom"
