--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,10 +1,33 @@
+# Set true color
+set-option -sa terminal-overrides ",xterm*:Tc"
+
+#Set Mouse support
+set -g mouse on
+
+# Set prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 setw -g mode-keys vi
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'christoomey/vim-tmux/navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+run '~/.tmux/plugins/tpm/tpm'
 
 set -g @catppuccin_flavour 'macchiato' # latte frappe, macchiato, mocha
 
