--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -19,6 +19,10 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 setw -g mode-keys vi
 
 # List of plugins
@@ -27,7 +31,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-run '~/.tmux/plugins/tpm/tpm'
 
 set -g @catppuccin_flavour 'macchiato' # latte frappe, macchiato, mocha
 
