--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -5,6 +5,7 @@ brew "btop"
 brew "cmake"
 brew "cowsay"
 brew "fastfetch"
+brew "groff"
 brew "htop"
 brew "hugo"
 brew "luarocks"
@@ -13,6 +14,7 @@ brew "neovim"
 brew "ninja"
 brew "node"
 brew "openjdk@17"
+brew "pandoc"
 brew "syncthing"
 brew "sysbench"
 brew "tmux"
@@ -22,6 +24,7 @@ brew "zsh-syntax-highlighting"
 brew "koekeishiya/formulae/yabai"
 cask "appcleaner"
 cask "audacity"
+cask "basictex"
 cask "betterdisplay"
 cask "blender"
 cask "discord"
