--- a/files/config.jsonc
+++ b/files/config.jsonc
@@ -1,16 +1,15 @@
 {
-    
     "layer": "top", // Waybar at top layer
     
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 32, // Waybar height (to be removed for auto height)
+    "height": 40, // Waybar height (to be removed for auto height)
     
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     
     // Choose the order of the modules
     "modules-left": [
-        "hyprland/workspaces", 
+        "hyprland/workspaces" 
         ],
     "modules-center": [
         "hyprland/window"
@@ -32,7 +31,7 @@
          "disable-scroll": false,
          "all-outputs": false,
          "warp-on-scroll": true,
-         "format": "{name}",
+         "format": "{name}"
          // "format": "{name}: {icon}",
          /*"format-icons": {
              "urgent": "",
@@ -105,11 +104,11 @@
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
+        "format-ethernet": "{ipaddr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {ipaddr}"
     },
     "pulseaudio": {
         "scroll-step": 1, // %, can be a float
@@ -129,5 +128,5 @@
             "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
-    },
+    }
 }
