add mute command

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -204,6 +204,7 @@ bindm = $mainMod, mouse:273, resizewindow
 # Volume control [+-], supports hold
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 # Media controls [Toggle play, skip next previous]
 bindl = , XF86AudioPlay, exec, playerctl play-pause
