Add shortcut for browser

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -30,6 +30,7 @@ exec-once = waybar & hyprpaper
 $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun
+$browser = firefox
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -147,6 +148,7 @@ bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod SHIFT, return, exec, $terminal
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, O, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
