--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -40,6 +40,7 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+env = MANGOHUD,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
