Add quick options for 60hz

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -15,6 +15,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
 monitor=DP-3,2560x1440@144,0x0,1
+# monitor=DP-3,2560x1440@59.951000,0x0,1
 
 # Custom Addition - dbus
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
