Add brightness control

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -218,5 +218,5 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Montior Brightness
-bindl = , XF86MonBrightnessUp, exec, $brightness --inc
-bindl = , XF86MonBrightnessDown, exec, $brightness --dec
+binde = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
+binde = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
