Add shortcut for wlogout

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -32,6 +32,7 @@ $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun
 $browser = firefox
+$logout = wlogout
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -147,6 +148,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, Q, exec, $logout
 bind = $mainMod SHIFT, return, exec, $terminal
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod, E, exec, $fileManager
