Add rofi button and VRR settings

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -43,6 +43,7 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GL_VRR_ALLOWED,1
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MANGOHUD,1
 input {
@@ -127,6 +128,8 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    vfr = false
+    vrr = 1
 }
 
 # Example per-device config
