--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -144,6 +144,7 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = stayfocused, title:^(TITLE)$, class:^(CLASS)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
