--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -22,7 +22,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & nm-applet # & hyprpaper
+exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
