Fix steam pop-ups

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -52,6 +52,9 @@ input {
 
     follow_mouse = 1
 
+    # For Steam's top bar
+    mouse_refocus = false
+
     touchpad {
         natural_scroll = yes
     }
@@ -141,7 +144,9 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = stayfocused, title:^(TITLE)$, class:^(CLASS)$
+
+# For Steam's Pop-up windows
+windowrulev2 = stayfocused, title:^(steam)$, class:^(steam)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
