--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -9,6 +9,10 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# Reload tmux
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
@@ -35,6 +39,27 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @catppuccin_flavour 'macchiato' # latte frappe, macchiato, mocha
+
+# Config 3
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
