--- a/files/MangoHud.conf
+++ b/files/MangoHud.conf
@@ -11,7 +11,7 @@ font_size=24
 text_color=FFFFFF
 position=top-left
 toggle_hud=Shift_R+F12
-pci_dev=0:0a:00.0
+pci_dev=0:0b:00.0
 table_columns=3
 
 fps
