--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -42,7 +42,9 @@ set -g @catppuccin_flavour 'macchiato' # latte frappe, macchiato, mocha
 
 # Config 3
 set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
 
@@ -53,13 +55,13 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_left_separator " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
