Remove network widget

--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -16,7 +16,7 @@
         ],
     "modules-right": [
         "pulseaudio",
-        "network",
+        // "network",
         "cpu",
         "memory",
         "temperature",
