Float Gnome Calculator

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -145,6 +145,7 @@ device{
 
 # For Steam's Pop-up windows
 windowrulev2 = stayfocused, title:^(steam)$, class:^(steam)$
+windowrulev2 = float, title:^(Calculator)$, class:^(org.gnome.Calculator)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
