Change term to alacritty

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -26,7 +26,8 @@ exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = kitty
+# $terminal = kitty
+$terminal = alacritty
 $fileManager = nautilus
 $menu = rofi -show drun
 $browser = firefox
