--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 # $terminal = kitty
 $terminal = alacritty
 $fileManager = nautilus
-$menu = rofi -show drun
+$menu = wofi --show drun
 $browser = firefox
 $logout = wlogout
 
