--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -11,10 +11,10 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
-monitor=DP-2,2560x1440@144,0x0,1
+# monitor=DP-2,2560x1440@144,0x0,1
 # monitor=DP-2,2560x1440@59.951000,0x0,1
 # monitor=HDMI-A-1,2560x1440@144,0x0,1
-# monitor=eDP-1,2256x1504@59.999001,0x0,1.175
+monitor=eDP-1,2256x1504@59.999001,0x0,1.175
 # Custom Addition - dbus
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -29,7 +29,7 @@ exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 # $terminal = kitty
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = wofi --show drun --allow-images
 $browser = firefox
 $logout = wlogout
 
