--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -31,7 +31,7 @@
     // Modules configuration
     "hyprland/workspaces": {
          "disable-scroll": false,
-         "all-outputs": false,
+         "all-outputs": true,
          "warp-on-scroll": true,
          "format": "{name}"
          // "format": "{name}: {icon}",
@@ -66,7 +66,25 @@
         "format": "{:%I:%M %p}",
         "format-alt": "{:%I:%M %p ~ %a %m·%d·%y}",
         "tooltip": true,
-        "tooltip-format": "<big>{:%a %m/%d/%y}</big>\n<tt><small>{calendar}</small></tt>"
+        "tooltip-format": "<big>{:%a %m/%d/%y}</big>\n<tt><small>{calendar}</small></tt>",
+        "calendar": {
+            "mode": "month",
+            "mode-mon-col": 3,
+            "on-scroll": 1,
+            "on-click-right": "mode",
+            "format": {
+                "months": "<span color='#ffead3'><b>{}</b></span>",
+                "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+                "today": "<span color='#ff6699'><b>{}</b></span>"
+            }
+        },
+        "actions": {
+            "on-click-right": "mode",
+            "on-click-forward": "tz_up",
+            "on-click-backward": "tz_down",
+            "on-scroll-up": "shift_up",
+            "on-scroll-down": "shift_down"
+        }
         // "tooltip-format": "<tt>{calendar}</tt>",
     },
     "cpu": {
