--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -2,7 +2,8 @@
     "layer": "top", // Waybar at top layer
     
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 40, // Waybar height (to be removed for auto height)
+    "height": 35, // Waybar height (to be removed for auto height)
+    "margin-bottom": 5,
     
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
