--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/macchiato.conf
 
 # Set programs that you use
 # $terminal = kitty
@@ -63,8 +64,8 @@ general {
     gaps_in = 3 #5
     gaps_out = 10 #20
     border_size = 3 #2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $sapphire $green 45deg
+    col.inactive_border = $overlay0
 
     layout = dwindle
 
@@ -86,7 +87,7 @@ decoration {
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = $base
 }
 
 animations {
@@ -123,7 +124,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
-    vfr = true
+    vfr = false
     vrr = 1
 }
 
