Change term back to kityt

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -24,10 +24,11 @@ exec-once = waybar & nm-applet & blueman-applet # & hyprpaper
 source = ~/.config/hypr/macchiato.conf
 
 # Set programs that you use
-# $terminal = kitty
-$terminal = alacritty
+$terminal = kitty
+# $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show drun --allow-images
+# $menu = wofi --show drun --allow-images
+$menu = rofi -show drun
 $browser = firefox
 $logout = wlogout
 
