Fix memory not displaying

--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -75,13 +75,12 @@
     },
 
     "cpu": {
-        "format": "{usage}% {icon}",
-	"format-icon": "",
+        "format": "{usage}% ",
         "tooltip": true
     },
     "memory": {
-        "format": "{usage}% {icon}",
-	"format-icon": ""
+        "format": "{}% ",
+        "tooltip": true
     },
 
     // Modules configuration
