dbus via the wiki

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -13,7 +13,7 @@
 monitor=,preferred,auto,auto
 
 # Custom Addition - dbus
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd --all
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
