--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once=dbus-update-activation-environment --systemd --all
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
 exec-once = waybar & dunst & nm-applet & blueman-applet # & hyprpaper
+exec-once = udiskie
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
