Update font to MesloLGS Nerd Font

--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -18,12 +18,12 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-:     font_family      MesloLGS NF
-:     bold_font        MesloLGS NF Bold
-:     italic_font      MesloLGS NF Italic
-:     bold_italic_font MesloLGS NF Bold Italic
+:     font_family      "MesloLGS Nerd Font"
+:     bold_font        "MesloLGS Nerd Font Bold" 
+:     italic_font      "MesloLGS Nerd Font Italic"
+:     bold_italic_font "MesloLGS Nerd Font Bold Italic"
 
-# font_size 11.0
+font_size 11.0
 
 #: Font size (in pts)
 
