--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -18,10 +18,14 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-:     font_family      "MesloLGS Nerd Font"
-:     bold_font        "MesloLGS Nerd Font Bold" 
-:     italic_font      "MesloLGS Nerd Font Italic"
-:     bold_italic_font "MesloLGS Nerd Font Bold Italic"
+# font_family      "MesloLGS Nerd Font"
+# bold_font        "MesloLGS Nerd Font Bold" 
+# italic_font      "MesloLGS Nerd Font Italic"
+# bold_italic_font "MesloLGS Nerd Font Bold Italic"
+font_family      "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Regular.ttf"
+bold_font        "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Bold.ttf"
+italic_font      "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Italic.ttf"
+bold_italic_font "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Bold Italic.ttf"
 
 font_size 11.0
 
