--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -24,8 +24,7 @@ exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie # & hyprpaper
 source = ~/.config/hypr/macchiato.conf
 
 # Set programs that you use
-$terminal = alacritty
-# $terminal = alacritty
+$terminal = kitty
 $fileManager = nautilus
 # $menu = wofi --show drun --allow-images
 $menu = rofi -show drun
