--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      MesloLGS Nerd Font
+bold_font        MesloLGS Nerd Font Bold
+italic_font      MesloLGS Nerd Font Italic
+bold_italic_font MesloLGS Nerd Font Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -18,14 +18,10 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-# font_family      "MesloLGS Nerd Font"
-# bold_font        "MesloLGS Nerd Font Bold" 
-# italic_font      "MesloLGS Nerd Font Italic"
-# bold_italic_font "MesloLGS Nerd Font Bold Italic"
-font_family      "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Regular.ttf"
-bold_font        "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Bold.ttf"
-italic_font      "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Italic.ttf"
-bold_italic_font "/home/cjwade/.local/share/fonts/MesloLGS Nerd Font Bold Italic.ttf"
+# font_family      "FiraCode Nerd Font"
+# bold_font        "FiraCode MesloLGS Nerd Font Bold" 
+# italic_font      "FiraCode MesloLGS Nerd Font Italic"
+# bold_italic_font "FiraCode MesloLGS Nerd Font Bold Italic"
 
 font_size 11.0
 
