--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -1,133 +1,127 @@
 {
-	"layer": "top",
-	"position": "top",
-	"margin-top": 2,
+  "layer": "top",
+  "position": "top",
+  "margin-top": 2,
 
-	"modules-left": [
-		"hyprland/workspaces",
-		"custom/arrow2"
-	],
+  "modules-left": ["hyprland/workspaces", "custom/arrow2"],
 
-	"modules-center": [
-		"hyprland/window"
-	],
+  "modules-center": ["hyprland/window"],
 
-	"modules-right": [
-		"custom/arrow1",
-		"pulseaudio",
-		"cpu",
-		"memory",
-		"temperature",
-		"battery",
-		"backlight",
-		"clock",
-		"tray"
-	],
+  "modules-right": [
+    "custom/arrow1",
+    "backlight",
+    "pulseaudio",
+    "cpu",
+    "memory",
+    "temperature",
+    "battery",
+    "clock",
+    "tray",
+  ],
 
-	// Modules
+  // Modules
 
-	"battery": {
-		"interval": 10,
-		"states": {
-			"warning": 30,
-			"critical": 15
-		},
-		"format-time": "{H}:{M:02}",
-		"format": "{capacity}% {icon} ({time})",
-		"format-charging": " {capacity}% ({time})",
-		"format-charging-full": " {capacity}%",
-		"format-full": "{icon} {capacity}%",
-		"format-alt": "{icon} {power}W",
-		"format-icons": [
-			"",
-			"",
-			"",
-			"",
-			""
-		],
-		"tooltip": false
-	},
-
-    "clock": {
-        "timezone": "America/Chicago",
-        "format": "{:%I:%M %p}",
-        "format-alt": "{:%I:%M %p ~ %a %m·%d·%y}",
-        "tooltip": true,
-        "tooltip-format": "<big>{:%a %m/%d/%y}</big>\n<tt><small>{calendar}</small></tt>",
-        "calendar": {
-            "mode": "month",
-            "mode-mon-col": 3,
-            "on-scroll": 1,
-            "on-click-right": "mode",
-            "format": {
-                "months": "<span color='#ffead3'><b>{}</b></span>",
-                "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-                "today": "<span color='#ff6699'><b>{}</b></span>"
-            }
-        },
-        "actions": {
-            "on-click-right": "mode",
-            "on-click-forward": "tz_up",
-            "on-click-backward": "tz_down",
-            "on-scroll-up": "shift_up",
-            "on-scroll-down": "shift_down"
-        }
+  "battery": {
+    "interval": 10,
+    "states": {
+      "warning": 30,
+      "critical": 15,
     },
+    "format-time": "{H}:{M:02}",
+    "format": "{capacity}% {icon} ({time})",
+    "format-charging": " {capacity}% ({time})",
+    "format-charging-full": " {capacity}%",
+    "format-full": "{icon} {capacity}%",
+    "format-alt": "{icon} {power}W",
+    "format-icons": ["", "", "", "", ""],
+    "tooltip": false,
+  },
 
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": true
+  "clock": {
+    "timezone": "America/Chicago",
+    "format": "{:%I:%M %p}",
+    "format-alt": "{:%I:%M %p ~ %a %m·%d·%y}",
+    "tooltip": true,
+    "tooltip-format": "<big>{:%a %m/%d/%y}</big>\n<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode": "month",
+      "mode-mon-col": 3,
+      "on-scroll": 1,
+      "on-click-right": "mode",
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b>{}</b></span>",
+      },
     },
-    "memory": {
-        "format": "{}% ",
-        "tooltip": true
+    "actions": {
+      "on-click-right": "mode",
+      "on-click-forward": "tz_up",
+      "on-click-backward": "tz_down",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down",
     },
+  },
 
-    // Modules configuration
-    "hyprland/workspaces": {
-         "disable-scroll": false,
-         "all-outputs": true,
-         "warp-on-scroll": true,
-         "format": "{name}"
-     },
+  "cpu": {
+    "format": "{usage}% ",
+    "tooltip": true,
+  },
+  "memory": {
+    "format": "{}% ",
+    "tooltip": true,
+  },
 
-    "pulseaudio": {
-        "scroll-step": 5, // %, can be a float
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{icon} {volume}%",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
+  // Modules configuration
+  "hyprland/workspaces": {
+    "disable-scroll": false,
+    "all-outputs": true,
+    "warp-on-scroll": true,
+    "format": "{name}",
+  },
+
+  "pulseaudio": {
+    "scroll-step": 5, // %, can be a float
+    "format": "{volume}% {icon}",
+    "format-bluetooth": "{icon} {volume}%",
+    "format-bluetooth-muted": " {icon} {format_source}",
+    "format-muted": "",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", "", ""],
     },
+    "on-click": "pavucontrol",
+  },
 
-    "temperature": {
-        "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        //"hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
-        "critical-threshold": 80,
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": [""]
-    },
+  "temperature": {
+    "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+    //"hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
+    "critical-threshold": 80,
+    "format": "{temperatureC}°C {icon}",
+    "format-icons": [""],
+  },
 
-	"tray": {
-		"icon-size": 18,
-		"spacing": 10
-	},
+  "backlight": {
+    "format": "{percent}% {icon}",
+    "format-icons": ["", ""],
+  },
 
-	"custom/arrow1": {
-		"format": "",
-		"tooltip": false
-	},
-	"custom/arrow2": {
-		"format": "",
-		"tooltip": false
-	}
+  "tray": {
+    "icon-size": 18,
+    "spacing": 10,
+  },
+
+  "custom/arrow1": {
+    "format": "",
+    "tooltip": false,
+  },
+  "custom/arrow2": {
+    "format": "",
+    "tooltip": false,
+  },
 }
