Boarder active animation

--- a/files/hyprland.conf
+++ b/files/hyprland.conf
@@ -91,11 +91,14 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = liner, 1, 1, 1, 1
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
+    # animation = border, 1, 10, default
+    # animation = borderangle, 1, 8, default
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
@@ -119,6 +122,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_splash_rendering = false
     vfr = false
     vrr = 1
 }
@@ -128,6 +132,11 @@ misc {
 device{
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+
+# Make xwayland not look terrible
+xwayland {
+    force_zero_scaling = true
 }
 
 # Source conf files
