Move hyprland.conf / add Super + Shift + Vim for moving windows

--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -19,11 +19,17 @@ bind = $mainMod, T, togglesplit, # dwindle
 # bind = $mainMod, up, movefocus, u
 # bind = $mainMod, down, movefocus, d
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + vim keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Move focus with mainMod + vim keys
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
