--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -17,8 +17,7 @@ exec-once=dbus-update-activation-environment --systemd --all
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & nm-applet & blueman-applet # & hyprpaper
-exec-once = udiskie
+exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie # & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -26,7 +25,6 @@ source = ~/.config/hypr/macchiato.conf
 
 # Set programs that you use
 $terminal = kitty
-# $terminal = alacritty
 $fileManager = nautilus
 # $menu = wofi --show drun --allow-images
 $menu = rofi -show drun
@@ -43,11 +41,6 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = MANGOHUD,1
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
     follow_mouse = 1
 
     # For Steam's top bar
@@ -98,11 +91,14 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = liner, 1, 1, 1, 1
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
+    # animation = border, 1, 10, default
+    # animation = borderangle, 1, 8, default
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
@@ -126,6 +122,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_splash_rendering = false
     vfr = false
     vrr = 1
 }
@@ -135,6 +132,11 @@ misc {
 device{
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+
+# Make xwayland not look terrible
+xwayland {
+    force_zero_scaling = true
 }
 
 # Source conf files
