--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -81,3 +81,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Montior Brightness
 binde = , XF86MonBrightnessUp, exec, brightnessctl s 5%+
 binde = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
+# Screenshots
+bind = , Print, exec, grimblast copysave area
