Change around keybindings / Meta+Q to close, Meta+Space for menu

--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -2,16 +2,28 @@
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, Q, exec, $logout
-bind = $mainMod SHIFT, return, exec, $terminal
-bind = $mainMod SHIFT, C, killactive, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, O, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
+
+# Close Hyprland
+bind = $mainMod SHIFT, Q, exit,
+
+# Show logout menu
+bind = $mainMod, Escape, exec, $logout
+bind = $mainMod SHIFT, C, killactive, 
+bind = $mainMod, Q, killactive, 
+
+# Exec Terminal
+bind = $mainMod SHIFT, return, exec, $terminal
+# Exec File manager
+bind = $mainMod, E, exec, $fileManager
+# Exec Browser
+bind = $mainMod, B, exec, $browser
+
+# Open menu
+bind = $mainMod, Space, exec, $menu
+bind = $mainMod, O, exec, $menu
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
