--- a/files/MangoHud.conf
+++ b/files/MangoHud.conf
@@ -11,7 +11,7 @@ font_size=24
 text_color=FFFFFF
 position=top-left
 toggle_hud=Shift_R+F12
-pci_dev=0:0b:00.0
+pci_dev=0:0d:00.0
 table_columns=3
 
 fps
@@ -42,6 +42,10 @@ vram_color=AD64C1
 ram
 ram_color=C26693
 
+vkbasalt
+
+hud_no_margin
+
 af=0
 picmip=0
 
@@ -49,4 +53,4 @@ output_folder=/home/cjwade
 log_duration=30
 autostart_log=0
 log_interval=100
-toggle_logging==Shift_L+F2
+toggle_logging=Shift_L+F2
