Update hyprland.conf accordingly

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -142,5 +142,6 @@ xwayland {
 # Source conf files
 
 source = ~/.config/hypr/windowrules.conf
+source = ~/.config/hypr/workspaces.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/monitors.conf
