Add quick lanuch for email Meta+M

--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -3,7 +3,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
 # Close Hyprland
@@ -11,19 +11,23 @@ bind = $mainMod SHIFT, Q, exit,
 
 # Show logout menu
 bind = $mainMod, Escape, exec, $logout
+
+# Kill active window
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod, Q, killactive, 
 
 # Exec Terminal
-bind = $mainMod SHIFT, return, exec, $terminal
+bind = $mainMod, return, exec, $terminal
 # Exec File manager
 bind = $mainMod, E, exec, $fileManager
 # Exec Browser
 bind = $mainMod, B, exec, $browser
+# Exec Email
+bind = $mainMod, M, exec, $email
 
 # Open menu
 bind = $mainMod, Space, exec, $menu
-bind = $mainMod, O, exec, $menu
+bind = $mainMod, P, exec, $menu
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
