--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once=dbus-update-activation-environment --systemd --all
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie # & hyprpaper
+exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -30,6 +30,7 @@ $fileManager = nautilus
 $menu = rofi -show drun
 $browser = firefox
 $logout = wlogout
+$email = org.mozilla.Thunderbird
 
 # Some default env vars.
 env = XDG_CURRENT_DESKTOP,Hyprland
