--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -60,7 +60,7 @@ general {
     gaps_in = 3 #5
     gaps_out = 10 #20
     border_size = 3 #2
-    col.active_border = $sapphire $green 45deg
+    col.active_border = $sapphire $blue 45deg
     col.inactive_border = $overlay0
 
     layout = dwindle
