--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -38,7 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @catppuccin_flavour 'macchiato' # latte frappe, macchiato, mocha
+set -g @catppuccin_flavor 'macchiato' # latte frappe, macchiato, mocha
 
 # Config 3
 set -g @catppuccin_window_left_separator ""
