--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once=dbus-update-activation-environment --systemd --all
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie & hyprpaper
+exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie & hyprpaper & hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -112,7 +112,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
 }
 
 gestures {
