--- a/files/hypr/monitors.conf
+++ b/files/hypr/monitors.conf
@@ -2,3 +2,4 @@
 monitor=DP-2,2560x1440@144,0x0,1
 # monitor=DP-2,2560x1440@60,0x0,1
 # monitor=eDP-1,2256x1504@60,0x0,1.175
+# monitor=eDP-1,2256x1504@60,0x0,1.566667
