Updates: Updated hypr configs:

--- a/files/hypr/hypridle.conf
+++ b/files/hypr/hypridle.conf
@@ -29,19 +29,19 @@ listener {
 }
 
 # dpms
-listener {
+# listener {
     # DPMS TIMEOUT
-    timeout = 660
+    # timeout = 660
     # DPMS ONTIMEOUT
-    on-timeout = hyprctl dispatch dpms off
+    # on-timeout = hyprctl dispatch dpms off
     # DPMS ONRESUME
-    on-resume = hyprctl dispatch dpms on
-}
+    # on-resume = hyprctl dispatch dpms on
+# }
 
 # Suspend
-listener {
+# listener {
     # SUSPEND TIMEOUT
-    timeout = 1800
+    # timeout = 1800
     #SUSPEND ONTIMEOUT
-    on-timeout = systemctl suspend
+    # on-timeout = systemctl suspend
 }
