--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -22,6 +22,10 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 # Exec Browser
 bind = $mainMod, B, exec, $browser
+# Exec Steam
+bind = $mainMod, S, exec, $steam
+# Exec Chat
+bind = $mainMod, D, exec, $chat
 # Exec Email
 bind = $mainMod, M, exec, $email
 
@@ -29,16 +33,17 @@ bind = $mainMod, M, exec, $email
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, exec, $menu
 
-# Move focus with mainMod + arrow keys
-# bind = $mainMod, left, movefocus, l
-# bind = $mainMod, right, movefocus, r
-# bind = $mainMod, up, movefocus, u
-# bind = $mainMod, down, movefocus, d
+# Fullscreen
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + vim keys
+# bind = $mainMod, left, movefocus, l
 bind = $mainMod, h, movefocus, l
+# bind = $mainMod, right, movefocus, r
 bind = $mainMod, l, movefocus, r
+# bind = $mainMod, up, movefocus, u
 bind = $mainMod, k, movefocus, u
+# bind = $mainMod, down, movefocus, d
 bind = $mainMod, j, movefocus, d
 
 # Move focus with mainMod + vim keys
@@ -72,8 +77,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e-1
