--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -30,6 +30,8 @@ $fileManager = nautilus
 $menu = rofi -show drun
 $browser = firefox
 $logout = wlogout
+$steam = steam
+$chat = discord
 $email = org.mozilla.Thunderbird
 
 # Some default env vars.
@@ -37,7 +39,7 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MANGOHUD,1
 input {
@@ -94,14 +96,14 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     bezier = liner, 1, 1, 1, 1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 3, myBezier
+    animation = windowsOut, 1, 3, default, popin 80%
     # animation = border, 1, 10, default
     # animation = borderangle, 1, 8, default
-    animation = border, 1, 1, liner
+    animation = border, 1, 3, liner
     animation = borderangle, 1, 30, liner, loop
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = fade, 1, 3, default
+    animation = workspaces, 1, 3, default
 }
 
 dwindle {
