Feat: Move env to separate file

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -34,14 +34,6 @@ $steam = steam
 $chat = discord
 $email = org.mozilla.Thunderbird
 
-# Some default env vars.
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
-env = WLR_NO_HARDWARE_CURSORS,1
-env = MANGOHUD,1
 input {
     kb_layout = us
     follow_mouse = 1
@@ -144,6 +136,7 @@ xwayland {
 
 # Source conf files
 
+source = ~/.config/hypr/environment.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/workspaces.conf
 source = ~/.config/hypr/keybindings.conf
