--- a/files/hypr/hyprpaper.conf
+++ b/files/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
+# preload = ~/Pictures/wallpapers/bliss 600dpi.jpg
 preload = ~/Pictures/wallpapers/default.jpg
+# wallpaper = ,~/Pictures/wallpapers/bliss 600dpi.jpg
 wallpaper = ,~/Pictures/wallpapers/default.jpg
 splash = true
