--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -19,6 +19,9 @@ exec-once=dbus-update-activation-environment --systemd --all
 # Execute your favorite apps at launch
 exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie & hyprpaper & hypridle
 
+# Set cursor
+exec-once=hyprctl setcursor Banana 24
+
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 source = ~/.config/hypr/macchiato.conf
