Fix: Enable esync

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -121,7 +121,7 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
     disable_splash_rendering = false
-    vfr = false
+    vfr = true
     vrr = 1
 }
 
@@ -135,6 +135,10 @@ device{
 # Make xwayland not look terrible
 xwayland {
     force_zero_scaling = true
+}
+
+render {
+    explicit_sync = 2
 }
 
 # Source conf files
