Fix: Update shadow variables in accordance with latest Hyprland release (0.45)

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -77,10 +77,12 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = $base
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = $base
+    }
 }
 
 animations {
@@ -121,7 +123,7 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
     disable_splash_rendering = false
-    vfr = true
+    vfr = false
     vrr = 1
 }
 
@@ -135,10 +137,6 @@ device{
 # Make xwayland not look terrible
 xwayland {
     force_zero_scaling = true
-}
-
-render {
-    explicit_sync = 2
 }
 
 # Source conf files
