Fix: Don't have Steam's notificationtoasts_2_desktop pop steal the screen.

--- a/files/hypr/workspaces.conf
+++ b/files/hypr/workspaces.conf
@@ -10,7 +10,7 @@ windowrulev2 = workspace 2, class:^(org.gnome.Nautilus)$
 windowrulev2 = workspace 2, class:^(io.github.celluloid_player.Celluloid)$
 windowrulev2 = workspace 3, class:^(firefox)$
 windowrulev2 = workspace 4, class:^(looking-glass-client)$
-windowrulev2 = workspace 5, class:^(steam)$
+windowrulev2 = workspace 5, class:^([Ss]team)$, title:^((?!notificationtoasts_2_desktop).)*$
 windowrulev2 = workspace 6, class:^(discord)$
 windowrulev2 = workspace 7, class:^(org.mozilla.Thunderbird)$
 windowrulev2 = workspace 8, class:^(com.obsproject.Studio)$
