--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -199,7 +199,12 @@ font_size 11.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
-
+ 
+cursor_trail 10
+cursor_trail_start_threshold 0
+shell_integration no-cursor
+cursor_trail_decay 0.01 0.15
+cursor_blink true
 #: }}}
 
 #: Scrollback {{{
