Fix: Add mpv to MangoHud blacklist

--- a/files/MangoHud.conf
+++ b/files/MangoHud.conf
@@ -54,4 +54,4 @@ log_duration=30
 autostart_log=0
 log_interval=100
 toggle_logging=Shift_L+F2
-blacklist=nautilus,pavucontrol
+blacklist=nautilus,pavucontrol,org.matplotlib.Matplotlib3,mpv
