--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -122,8 +122,8 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
-    disable_splash_rendering = false
-    vfr = false
+    disable_splash_rendering = true
+    vfr = true
     vrr = 1
 }
 
