--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -17,10 +17,17 @@ exec-once=dbus-update-activation-environment --systemd --all
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & nm-applet & blueman-applet & udiskie & hyprpaper & hypridle
+exec-once = waybar &
+exec-once = dunst &
+exec-once = nm-applet &
+exec-once = blueman-applet &
+exec-once = udiskie &
+exec-once = hyprpaper &
+exec-once = hypridle &
 
 # Set cursor
-exec-once=hyprctl setcursor Banana 24
+#exec-once=hyprctl setcursor Banana 24
+exec-once=hyprctl setcursor Adwaita 24
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
