--- a/files/hypr/environment.conf
+++ b/files/hypr/environment.conf
@@ -6,3 +6,7 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MANGOHUD,1
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = NVD_BACKEND,direct
